<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xmlns="http://maven.apache.org/POM/4.0.0"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
    <artifactId>spring-boot-starter-parent</artifactId>
    <groupId>org.springframework.boot</groupId>
    <relativePath/>
    <version>3.1.6</version> <!-- lookup parent from repository -->
  </parent>

  <name>blog</name>
  <groupId>com.jxiang</groupId>
  <artifactId>blog</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <modelVersion>4.0.0</modelVersion>
  
  <properties>
    <java.version>17</java.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
  </properties>
 
  <profiles>
    <!--production env-->
    <profile>
      <id>prod</id>
      <properties>
        <profile.active>prod</profile.active>
      </properties>
    </profile>

    <!--development env-->
    <profile>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <id>dev</id>
      <properties>
        <profile.active>dev</profile.active>
      </properties>
    </profile>
  </profiles>

  <dependencyManagement>
    <dependencies>
      <!-- database -->
      <dependency>
        <groupId>com.baomidou</groupId>
        <artifactId>mybatis-plus-boot-starter</artifactId>
        <version>3.5.4</version>
      </dependency>
      <dependency>
        <artifactId>mysql-connector-j</artifactId>
        <groupId>com.mysql</groupId>
        <version>8.1.0</version>
      </dependency>

      <!-- jwt -->
      <dependency>
        <artifactId>jjwt-api</artifactId>
        <groupId>io.jsonwebtoken</groupId>
        <version>0.11.5</version>
      </dependency>
      <dependency>
        <artifactId>jjwt-impl</artifactId>
        <groupId>io.jsonwebtoken</groupId>
        <scope>runtime</scope>
        <version>0.11.5</version>
      </dependency>
      <dependency>
        <artifactId>jjwt-jackson</artifactId>
        <groupId>io.jsonwebtoken</groupId> <!-- or jjwt-gson if Gson is preferred -->
        <scope>runtime</scope>
        <version>0.11.5</version>
      </dependency>
      
      <!-- utilities -->
      <dependency>
        <artifactId>commons-codec</artifactId>
        <groupId>commons-codec</groupId>
        <version>1.15</version>
      </dependency>
      <dependency>
        <artifactId>lombok</artifactId>
        <groupId>org.projectlombok</groupId>
        <version>1.18.30</version>
      </dependency>
      <dependency>
        <artifactId>fastjson</artifactId>
        <groupId>com.alibaba</groupId>
        <version>2.0.40</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <artifactId>spring-boot-starter-web</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-aop</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-data-redis</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>

    <dependency>
      <artifactId>mybatis-plus-boot-starter</artifactId>
      <groupId>com.baomidou</groupId>
    </dependency>
    <dependency>
      <artifactId>mysql-connector-j</artifactId>
      <groupId>com.mysql</groupId>
    </dependency>
   
    <dependency>
      <artifactId>jjwt-api</artifactId>
      <groupId>io.jsonwebtoken</groupId>
    </dependency>
    <dependency>
      <artifactId>jjwt-impl</artifactId>
      <groupId>io.jsonwebtoken</groupId>
    </dependency>
    <dependency>
      <artifactId>jjwt-jackson</artifactId>
      <groupId>io.jsonwebtoken</groupId> <!-- or jjwt-gson if Gson is preferred -->
    </dependency>

     <dependency>
      <artifactId>fastjson</artifactId>
      <groupId>com.alibaba</groupId>
    </dependency>
    <dependency>
      <artifactId>commons-codec</artifactId>
      <groupId>commons-codec</groupId>
    </dependency>
    <dependency>
      <artifactId>lombok</artifactId>
      <groupId>org.projectlombok</groupId>
    </dependency>
  </dependencies>

   <build>
    <plugins>
      <plugin>
        <artifactId>spring-boot-maven-plugin</artifactId>
        <groupId>org.springframework.boot</groupId>
        <version>2.7.18</version>
      </plugin>

      <!--allow application.yml to read pom.xml-->
      <plugin>
        <artifactId>maven-resources-plugin</artifactId>
        <configuration>
          <encoding>UTF-8</encoding>
          <useDefaultDelimiters>true</useDefaultDelimiters>
        </configuration>
        <groupId>org.apache.maven.plugins</groupId>
        <version>3.2.0</version>
      </plugin>
    </plugins>
  </build>  
</project>
